--- a/yoga/sass/styles.scss
+++ b/yoga/sass/styles.scss
@@ -7,3 +7,45 @@
 // Import Bootstrap for Sass
 @import "bootstrap";
 
+
+body{
+  font-family: nunito;
+  background-color: #aa8cc5;
+
+}
+
+
+.carousel-size{
+  width: 100%;
+  height: 250px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.carousel-control.left, .carousel-control.right {
+  background-image: none
+}
+
+.img-size{
+  width: 400px;
+  height: 250px;
+}
+
+.jumbotron{
+  background-color: transparent;
+  color: #F6E9EF;
+  margin-bottom: 0px;
+  padding-bottom: 20px;
+}
+
+.page-header{
+  margin-bottom: 0px;
+}
+
+.main-text{
+  float: left;
+}
+
+.main-img{
+  float:right;
+}
