--- a/yoga/sass/styles.scss
+++ b/yoga/sass/styles.scss
@@ -10,7 +10,8 @@
 
 body{
   font-family: nunito;
-  background-color: #aa8cc5;
+  background-color: #ffffff;
+  color: #88709d;
 
 }
 
@@ -23,7 +24,7 @@ body{
 }
 
 .carousel-control.left, .carousel-control.right {
-  background-image: none
+  background-image: none;
 }
 
 .img-size{
@@ -33,19 +34,42 @@ body{
 
 .jumbotron{
   background-color: transparent;
-  color: #F6E9EF;
   margin-bottom: 0px;
   padding-bottom: 20px;
 }
 
 .page-header{
   margin-bottom: 0px;
+  border-bottom: 2px solid #88709d;
 }
 
-.main-text{
+.main-row{
+
+  margin: 30px 60px;
+  padding: 20px 0px;
+  border-bottom: 2px solid #88709d;
+  border-top: 2px solid #88709d;
+
+  .main-text{
+    font-size: 15px;
+    line-height: 25px;
+    text-align: justify;
+  }
+
+
+}
+.left{
   float: left;
 }
 
-.main-img{
+.right{
   float:right;
+}
+
+.text-separator{
+    margin: 5px 0px;
+}
+
+.glyphicon{
+  color: #88709d;
 }
