--- a/yoga/stylesheets/styles.css
+++ b/yoga/stylesheets/styles.css
@@ -12388,3 +12388,26 @@ body {
   text-align: center;
   margin: 10px;
 }
+
+/* line 83, ../sass/styles.scss */
+.teacher {
+  float: left;
+}
+
+/* line 87, ../sass/styles.scss */
+.social-media-icon {
+  background: #3b5998;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  font-size: 25px;
+  text-align: center;
+  margin-right: 10px;
+  float: right;
+  padding-top: 5px;
+}
+/* line 88, ../sass/styles.scss */
+.social-media-icon a {
+  color: #ffffff;
+}
